--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@ img {
   max-width: 100%;
   border-radius: 50%;
   display: block;
+
+  margin-right: 10px;
 }
 
 /** General Header */
@@ -56,8 +58,6 @@ header {
   flex-shrink: 0;
   display: flex;
   align-items: center;
-
-  border: 1px dashed black;
 }
 
 header .user {
@@ -84,8 +84,6 @@ aside {
   height: 100%;
   display: flex;
   flex-direction: column;
-
-  border: 1px dashed green;
 }
 
 /** Header Contacts */
@@ -144,7 +142,13 @@ img.user-img {
 .contacts {
   overflow: auto;
   flex-grow: 1;
-  background-color: dodgerblue;
+
+  padding: 1rem;
+}
+
+.contacts .preview-chat {
+  display: flex;
+  margin-bottom: 2rem;
 }
 
 /*# Main */
@@ -152,8 +156,6 @@ main {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-
-  border: 1px dashed black;
 }
 
 /** Chat Content */
