--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
   background: linear-gradient(var(--bg-top) 15%, var(--bg-bottom) 15%);
 }
 
-#wrap {
+.wrap {
   display: flex;
   align-items: center;
   justify-content: center;
