--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,9 @@ img.user-img {
   background-color: var(--bg-notification);
   flex-shrink: 0;
 
+  display: flex;
+  align-items: center;
+
   padding-left: 40px;
 }
 
